--- a/css/styles.css
+++ b/css/styles.css
@@ -32,8 +32,16 @@ body {
     transition: background-color 0.6s;
 }
 
+.__active.nav__button{
+    background-color: var(--green);
+}
+
 .nav__button:hover {
     background-color: var(--purple);
+}
+
+section.__active .blurb{
+    border-bottom: 5px dotted var(--green);
 }
 
 h1 {
@@ -50,6 +58,7 @@ h2 {
 
 .blurb{
     border-bottom: 5px dotted var(--orange);
+    transition: border-bottom 0.5s;
 }
 
 .landing__container button {
@@ -82,9 +91,7 @@ h2 {
     margin: 10px;
     text-align: center;
 }
-.__active.nav__button{
-    background-color: var(--green);
-}
+
 
 @media (max-width:699px){
 
