--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ h2 {
 }
 
 
-@media screen and (max-width:699){
+@media screen and (max-width:699px){
 
     .page__header{
         position: fixed;
