--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@ body {
     scrollbar-gutter: stable both-sides ;
 }
 
+button {
+    font-size: 1em;
+}
+
 .main__hero{
     background-color: var(--purple);
     border-radius: 100%;
@@ -46,12 +50,12 @@ section.__active .blurb{
 
 h1 {
     letter-spacing: 3px;
-    font-size: 3em;
     text-align: center;
 }
 
 h2 {
     letter-spacing: 2px;
+    font-size: 1.5em;
     border-radius: 60%;
     background-color: var(--yellow);
 }
@@ -93,7 +97,7 @@ h2 {
 }
 
 
-@media screen and (max-width:699px){
+@media (max-width:799px){
 
     .page__header{
         position: fixed;
@@ -101,6 +105,7 @@ h2 {
         width: 100%;
         z-index: 1;
         background-color: rgba(255,255,255,0.7);
+        padding-bottom: 20px;
     }
 
     .main__hero {
@@ -115,7 +120,7 @@ h2 {
 
     h1 {
         margin: auto;
-        line-height: 1.9em;
+        padding: 15px 5px;
     }
 
     .navbar__menu {
@@ -139,7 +144,7 @@ h2 {
     main{
         position: relative;
         z-index: 0;
-        margin-top: 250px;
+        margin-top: 25vh;
     }
 
     section {
@@ -157,13 +162,15 @@ h2 {
     h2 {
         width: 70%;
         padding: 10px;
-        margin: 20px 0 10px;
+        margin: 20px 0 0 0;
         line-height: 1.2em;
     }
 
     .blurb{
         width: 90%;
         padding: 20px;
+        margin: 0;
+        margin-bottom: 20px;
     }
 
     .landing__container button {
@@ -174,7 +181,7 @@ h2 {
 
 }
 
-@media screen and (min-width:700px) and (max-width:999px){
+@media screen and (min-width:800px) and (max-width:999px){
 
     .page__header{
         position: fixed;
