--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body {
     --blue: #98CDF0 ;
     --green: #82DA00 ;
     --purple: #BE68BA ;
+    --dark-pink: #ff3c48;
     --orange: #ff9800 ; 
     scrollbar-gutter: stable both-sides ;
 }
@@ -44,9 +45,7 @@ button {
     background-color: var(--purple);
 }
 
-section.__active .blurb{
-    border-bottom: 5px dotted var(--green);
-}
+
 
 h1 {
     letter-spacing: 3px;
@@ -57,23 +56,36 @@ h2 {
     letter-spacing: 2px;
     font-size: 1.5em;
     border-radius: 60%;
-    background-color: var(--yellow);
+    background-color: var(--dark-pink);
+    color: white;
+    border-bottom: 10px dashed var(--yellow);
 }
 
-.blurb{
-    border-bottom: 5px dotted var(--orange);
-    transition: border-bottom 0.5s;
+section{
+    border: 5px solid var(--blue);
+    z-index: -1;
+    border-radius: 4px;
 }
+
+
 
 .landing__container button {
     border-radius: 0;
     border: 0;
     background-color: var(--pink);
-    transition: border-radius 0.5s;
+    transition: border-radius 0.5s, margin-bottom 0.2s ease-in-out, width 0.4s ease-in-out;
+    z-index: 0;
+    color: white;
+    font-size: 1.2em;
+    font-weight: 400;
+    letter-spacing: 2px;
+    text-decoration: underline;
 }
 
 .landing__container button[active]{
     border-radius: 40px 40px 0 0;
+    width: 100%;
+    margin-bottom: 0;
 }
 
 .lyrics{
@@ -81,7 +93,11 @@ h2 {
     overflow: hidden;
     transition: height 0.5s;
     width: 100%;
-    background-image: linear-gradient(var(--pink),white);
+    background-image: linear-gradient(var(--pink),rgba(255,255,255,0));
+}
+
+.separator {
+    background-color: #82DA00;
 }
 
 .lyrics[active]{
@@ -149,6 +165,9 @@ h2 {
 
     section {
         margin: 40px 10px;
+        padding: 10px;
+        border-radius: 130px 50px 50px 50px;
+        transition: border-radius 0.2s ease;
     }
 
     .landing__container{
@@ -170,12 +189,19 @@ h2 {
         width: 90%;
         padding: 20px;
         margin: 0;
-        margin-bottom: 20px;
+        padding-bottom: 0;
     }
 
     .landing__container button {
-        width: 100%;
         padding: 10px;
+        width: 90%;
+        margin-bottom: 15px;
+    }
+
+    .separator {
+        width: 75%;
+        height: 3px;
+        margin: 25px;
     }
 
 
@@ -185,8 +211,94 @@ h2 {
 
     .page__header{
         position: fixed;
-        width: 20%;
+        top: 0;
+        width: 100%;
+        z-index: 1;
+        background-color: rgba(255,255,255,0.7);
+        padding-bottom: 20px;
     }
+
+    .main__hero {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 65vw;
+        margin: auto;
+        margin-top: 20px;
+    }
+
+    h1 {
+        margin: auto;
+        padding: 15px 5px;
+    }
+
+    .navbar__menu {
+        width: 90%;
+        margin: auto;
+        height: 4em;
+    }
+
+    #navbar__list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 0;
+    }
+
+    #navbar__list li{
+        margin: 5px;
+    }
+
+    main{
+        position: relative;
+        z-index: 0;
+        margin-top: 25vh;
+    }
+
+    section {
+        margin: 40px 10px;
+        padding: 10px;
+        border-radius: 130px 50px 50px 50px;
+        transition: border-radius 0.2s ease;
+    }
+
+    .landing__container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        text-align: center;
+    }
+
+    h2 {
+        width: 70%;
+        padding: 10px;
+        margin: 20px 0 0 0;
+        line-height: 1.2em;
+    }
+
+    .blurb{
+        width: 90%;
+        padding: 20px;
+        margin: 0;
+        padding-bottom: 0;
+    }
+
+    .landing__container button {
+        padding: 10px;
+        width: 90%;
+        margin-bottom: 15px;
+    }
+
+    .separator {
+        width: 75%;
+        height: 3px;
+        margin: 25px;
+    }
+
+
 
 }
 
