--- a/css/styles.css
+++ b/css/styles.css
@@ -64,10 +64,7 @@ h2 {
 }
 
 section{
-    border: 5px solid var(--blue);
     z-index: -1;
-    border-radius: 130px 50px 50px 50px;
-    transition: border-radius 0.2s ease;
 }
 
 
@@ -114,6 +111,21 @@ section{
     margin: 10px;
     text-align: center;
 }
+
+footer {
+    position: relative;
+    border-top: 5px dashed var(--orange);
+    border-radius: 100px;
+    width: 60vw;
+    display:flex;
+    margin:auto;
+    margin-top: 50px;
+}
+
+footer p{
+    margin: 20px auto;
+}
+
 
 
 @media (max-width:699px){
@@ -177,6 +189,9 @@ section{
     section {
         margin: 40px 10px;
         padding: 10px;
+        border-radius: 130px 50px 50px 50px;
+        transition: border-radius 0.2s ease;
+        border: 5px solid var(--blue);
     }
 
     .landing__container{
@@ -276,6 +291,7 @@ section{
         margin: 5em 10px;
         padding: 3vmin;
         border-radius: 130px 50px 50px 50px;
+        border: 5px solid var(--blue);
         transition: border-radius 0.2s ease;
         border-width: 10px;
     }
@@ -318,19 +334,118 @@ section{
 
 
 @media screen and (min-width: 1000px){
+
+    body{
+        font-size: 13px;
+    }
+
     .page__header{
         position: fixed;
-        width: 20%;
+        top: 0;
+        width: 100vw;
+        z-index: 1;
+        background-color: rgba(255,255,255,0.7);
+        padding: 2vmax;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-content: center;
+        align-items: center;
     }
 
     .main__hero {
         display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        width: 20vmax;
-        height: 7.5vmax;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
     }
-    
+
+    h1 {
+        margin: auto;
+        padding: 15px;
+        font-size: 2.5em;
+    }
+
+    .navbar__menu {
+        padding: 0;
+    }
+
+    #navbar__list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        width: 50vw;
+        height: 6em;
+        padding: 0;
+        margin: 0;
+    }
+
+    #navbar__list li{
+        margin: 1vw;
+    }
+
+    main{
+        position: relative;
+        z-index: 0;
+        margin-top: 10vmax;
+    }
+
+    section {
+        margin: 3em 10px;
+        padding: 3vmin;
+    }
+
+    .landing__container{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        height: 60vh;
+        flex-wrap: wrap;
+        border-left: 7px dotted var(--blue);
+        width: 80%;
+        margin: auto;
+        border-radius: 100px;
+    }
+
+    h2 {
+       width: 25vmax;
+       line-height: 1.5em;
+       padding: 0.5em;
+       margin-right: 10px;
+       margin-top: 30px;
+       align-self: flex-end;
+    }
+
+    .blurb{
+        width: 25vmax;
+        padding: 1em;
+        margin-right: 10px;
+        align-self: flex-end;
+        border-bottom: 4px solid var(--green);
+        border-radius: 100px;
+    }
+
+    .landing__container button {
+        padding: 10px;
+        width: 90%;
+        margin-bottom: 15px;
+    }
+
+    button.toggle {
+        display: none;
+    }
+
+    .lyrics {
+        height: 100%;
+        width: 50%;
+        padding: 1em;
+        box-sizing: border-box;
+        overflow-y: scroll;
+        border-radius: 100px 0 0 100px;
+        margin-left: 10px;
+    }
 
    
 }
